Change DatasetDescriptor.Builder's schema(URL) and schemaFromAvroDataFile(URL) methods to take URIs. This avoids a common problem where users try to construct URL instances with an 'hdfs' scheme, which will fail unless a protocol handler has been registered for that scheme (which is very unlikely). By using URI we can do the handler registration internally as needed.